# tether-assignment

./: .gitignore  README.md  pyproject.toml  test_mix.yaml
configs/: merge_average.yaml
configs/datamix/: datamix_nemotron.yaml  datamix_nemotron_rds.yaml  datamix_original.yaml
configs/eval/: eval.yaml  eval_sweep.yaml
configs/experiments/: cpt_smollm2_135m_nemotron.yaml  cpt_smollm2_135m_nemotron_tp3.yaml  cpt_smollm2_135m_smollm_corpus.yaml  distill_smollm2_135m_teacher_smollm_1p7b_nemotron.yaml
configs/merge/: merge_average.yaml  merge_slerp.yaml  merge_ties.yaml
configs/utils/: download_datasets.yaml  download_datasets_2.yaml  download_models.yaml  tokenize_datasets.yaml
src/tether/: __init__.py  distill.py  distill_deprecated.py  merge.py  pretrain.py  pretrain_deprecated.py
src/tether/cli/: main.py
src/tether/data/: download_datasets.py  download_models.py  downloader.py  memmap_writer.py  tokenization.py  tokenize_datasets.py
src/tether/eval/: __init__.py  eval_lighteval.py  tasks.py
src/tether/training/: __init__.py  checkpoint.py  datamix.py  datasets.py  distributed.py  lr_schedule.py  packing.py  parallelism_hf.py
src/tether/utils/: config.py
